--- a/TCC/Views/LoginPage.xaml
+++ b/TCC/Views/LoginPage.xaml
@@ -17,17 +17,8 @@
                 <VerticalStackLayout HorizontalOptions="Center"
                          VerticalOptions="Center"
                          Spacing="8">
-                    <Label Text="🎉 Seja Bem-Vindo! 🎉" 
+                    <Label Text="Seja Bem-Vindo!" 
                FontSize="26" 
-               HorizontalOptions="Center" 
-               FontAttributes="Bold"
-               TextColor="White" />
-                    <Label Text="Conecte-se ao serviço de transporte Barbieri!" 
-               FontSize="16" 
-               HorizontalOptions="Center" 
-               TextColor="White" />
-                    <Label Text="Prepare-se para embarcar rumo aos seus sonhos 🚋" 
-               FontSize="16" 
                HorizontalOptions="Center" 
                FontAttributes="Bold"
                TextColor="White" />
