--- a/TCC/Views/ViagemPage.xaml
+++ b/TCC/Views/ViagemPage.xaml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:esri="http://schemas.esri.com/arcgis/runtime/2013"
+             xmlns:local="clr-namespace:TCC.ViewModels"
              x:Class="TCC.Views.ViagemPage"
              Title="Viagem"
              BackgroundColor="#F5F5F5">
 
-    <ScrollView>
-        <VerticalStackLayout Spacing="0">
-                
-          
-        </VerticalStackLayout>
-    </ScrollView>
+    <ContentPage.Resources>
+        <local:MapViewModel x:Key="MapViewModel" />
+    </ContentPage.Resources>
+
+    <esri:MapView x:Name="MainMapView" Map="{Binding Map, Source={StaticResource MapViewModel}}" />
 </ContentPage>
