--- a/TCC/Views/DriverRegisterPage.xaml
+++ b/TCC/Views/DriverRegisterPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:behaviors="clr-namespace:TCC.Behaviors"
              x:Class="TCC.Views.DriverRegisterPage"
              Title="Criar Conta"
              BackgroundColor="#F5F5F5">
@@ -70,22 +71,29 @@
                     </Entry>
                 </VerticalStackLayout>
 
-                <!-- CPF -->
+                <!-- CPF com validação -->
                 <VerticalStackLayout Spacing="5">
                     <Label Text="CPF" 
-                           FontSize="14" 
-                           TextColor="#333" />
+           FontSize="14" 
+           TextColor="#333" />
                     <Entry x:Name="CPFEntry" 
-                           Placeholder="000.000.000-00" 
-                           FontSize="16" 
-                           BackgroundColor="White" 
-                           TextColor="#333" 
-                           Keyboard="Numeric"
-                           HeightRequest="45">
+           Placeholder="000.000.000-00" 
+           FontSize="16" 
+           BackgroundColor="White" 
+           TextColor="#333" 
+           Keyboard="Numeric"
+           HeightRequest="45">
                         <Entry.Behaviors>
                             <toolkit:MaskedBehavior Mask="XXX.XXX.XXX-XX" />
+                            <behaviors:CPFValidationBehavior x:Name="CPFValidation" ErrorLabel="{x:Reference CPFErrorLabel}" />
                         </Entry.Behaviors>
                     </Entry>
+                    <!-- Label de erro para CPF -->
+                    <Label x:Name="CPFErrorLabel" 
+           FontSize="12" 
+           TextColor="Red" 
+           IsVisible="False" 
+           Margin="0,2,0,0" />
                 </VerticalStackLayout>
 
                 <!-- Email -->
